[gd_scene load_steps=8 format=3 uid="uid://dadxe0f1g2hij"]

[ext_resource type="Script" uid="uid://c0hksh4nrb6ui" path="res://examples/Level_GiantBoss.gd" id="1_boss_level"]
[ext_resource type="PackedScene" uid="uid://kuwc58wcfuui" path="res://actors/GiantBoss.tscn" id="2_giant_boss"]
[ext_resource type="PackedScene" uid="uid://b8vxnan0p1qrs" path="res://ui/BossHealthUI.tscn" id="3_boss_ui"]
[ext_resource type="PackedScene" uid="uid://ca03v34a42d3i" path="res://actors/Player.tscn" id="4_player"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(1280, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(64, 720)

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 32
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="Level_GiantBoss" type="Node2D"]
script = ExtResource("1_boss_level")

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(640, 680)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("RectangleShape2D_1")

[node name="ColorRect" type="ColorRect" parent="Ground"]
offset_left = -640.0
offset_top = -32.0
offset_right = 640.0
offset_bottom = 32.0
color = Color(0.4, 0.3, 0.2, 1)

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2(-32, 360)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource("RectangleShape2D_2")

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2(1312, 360)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
shape = SubResource("RectangleShape2D_2")

[node name="GiantBoss" parent="." instance=ExtResource("2_giant_boss")]
position = Vector2(640, 550)

[node name="Player" parent="." instance=ExtResource("4_player")]
position = Vector2(200, 600)

[node name="UI" type="CanvasLayer" parent="."]

[node name="BossHealthUI" parent="UI" instance=ExtResource("3_boss_ui")]
grow_horizontal = 2

[node name="VictoryUI" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="UI/VictoryUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VictoryText" type="Label" parent="UI/VictoryUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "BOSS DEFEATED!
+1000 POINTS"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Instructions" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 120.0
text = "BOSS FIGHT!

Jump on the boss's head 5 times to defeat it!
Avoid the TNT crates it drops!

Controls:
WASD/Arrows - Move
Space - Jump"
horizontal_alignment = 1
